--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 		<h2>Чем мы занимаемся</h2>
 		<ul>
 			<li>
-				<img src="" alt="" width="370">
+				<img src="./imeg/img_1.jpg" alt="десктопные приложения" width="370">
 			</li>
 			<li>
-				<img src="" alt="" width="370">
+				<img src="./imeg/img_2.jpg" alt="мобильные приложения" width="370">
 			</li>
 			<li>
-				<img src="" alt="" width="370">
+				<img src="./imeg/img_3.jpg" alt="дизайнерские решения" width="370">
 			</li>
 		</ul>
 	</section>
@@ -79,35 +79,43 @@
 		<h2>Наша команда</h2>
 		<ul>
 			<li>
-				<img src="" alt="" width="270">
+				<img src="./imeg/img_4.jpg" alt="Игорь Демьяненко" width="270">
 				<h3>Игорь Демьяненко</h3>
 				<p>Product Designe</p>
 			</li>
 			<li>
-				<h3></h3>
-				<p></p>
+				<img src="./imeg/img_5.jpg" alt="Ольга Репина" width="270">
+				<h3>Ольга Репина</h3>
+				<p>Frontend Developer</p>
 			</li>
 			<li>
-				<h3></h3>
-				<p></p>
+				<img src="./imeg/img_6.jpg" alt="Николай Тарасов" width="270">
+				<h3>Николай Тарасов</h3>
+				<p>Marketing</p>
 			</li>
 			<li>
-				<h3></h3>
-				<p></p>
+				<img src="./imeg/img_7.jpg" alt="Михаил Ермаков" width="270">
+				<h3>Михаил Ермаков</h3>
+				<p>UI Designer</p>
 			</li>
 		</ul>
 
 	</section>
 	</main>
+
 <!--Footer - Нижний колонтитул-->
 	<footer>
-		<a href="/">WebStudio</a>
-		<a href="/">г. Киев, пр-т Леси Украинки, 26</a>
-		<a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
-		<a href="tel:+380961111111" class="contact-link">+380961111111</a>
+		<h2>Нижний колонтитул</h2>
+					 <!--Logo-->
+			<a href="/">WebStudio</a>
+			 <!--Address-->
+			<address> г. Киев, пр-т Леси Украинки, 26</address>
+			<!--Links to email and phone -->
+		<ul>
+			<li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+			<li><a href="tel:+380961111111" class="contact-link">+380961111111</a></li>
+		</ul>
 	 </footer>
-
-
 
 </body>
 </html>
